; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_19412.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_19412.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i8, align 1
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i8 0, i8* %6, align 1
  br label %7

7:                                                ; preds = %34, %2
  %8 = load i8, i8* %6, align 1
  %9 = sext i8 %8 to i32
  %10 = load i8**, i8*** %5, align 8
  %11 = getelementptr inbounds i8*, i8** %10, i64 1
  %12 = load i8*, i8** %11, align 8
  %13 = call signext i8 @strlen(i8* %12)
  %14 = sext i8 %13 to i32
  %15 = icmp slt i32 %9, %14
  br i1 %15, label %16, label %37

16:                                               ; preds = %7
  %17 = load i8**, i8*** %5, align 8
  %18 = getelementptr inbounds i8*, i8** %17, i64 1
  %19 = load i8*, i8** %18, align 8
  %20 = load i8, i8* %6, align 1
  %21 = sext i8 %20 to i64
  %22 = getelementptr inbounds i8, i8* %19, i64 %21
  %23 = load i8, i8* %22, align 1
  %24 = sext i8 %23 to i32
  %25 = load i8, i8* %6, align 1
  %26 = sext i8 %25 to i32
  %27 = add nsw i32 %26, 1
  %28 = shl i32 %27, 1
  %29 = trunc i32 %28 to i8
  %30 = sext i8 %29 to i32
  %31 = xor i32 %24, %30
  %32 = trunc i32 %31 to i8
  %33 = call i32 @putchar(i8 signext %32)
  br label %34

34:                                               ; preds = %16
  %35 = load i8, i8* %6, align 1
  %36 = add i8 %35, 1
  store i8 %36, i8* %6, align 1
  br label %7

37:                                               ; preds = %7
  ret i32 0
}

declare dso_local signext i8 @strlen(i8*) #1

declare dso_local i32 @putchar(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
